# pakx

./: Cargo.toml  README.md
src/: lib.rs  main.rs  util.rs
src/cmd/: bswap.rs  bytes.rs  pack.rs  unpack.rs
tests/: bytes.rs  cli.rs  formatting.rs  roundtrip.rs
