[package]
name = "pakx"
version = "0.1.1"
edition = "2024"                       
rust-version = "1.85"                  
description = "Coreutils-style pack/unpack/endian/byte-handling CLI"
license = "Apache-2.0"
readme = "README.md"
keywords = ["pack", "unpack", "endian", "bytes", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
proptest = "1"